[tool.poetry]
name = "llm-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
openai = "^1.52.2"
langchain-community = "^0.3.3"
fastapi = "^0.115.4"
langchain-ollama = "^0.2.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
